// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> should render a mobile table 1`] = `
<styled.div
  data-component-type="table"
>
  <styled.table>
    <styled.thead>
      <TableHeader
        columns={
          Array [
            Object {
              "alignment": "left",
              "content": [Function],
              "name": "fileName",
              "size": "auto",
              "title": "file name",
            },
            Object {
              "alignment": "right",
              "content": [Function],
              "name": "createAt",
              "size": "shrink",
              "title": "created at",
            },
          ]
        }
        hasBulkAction={false}
        hasLeftAction={false}
        hasSortEnabled={true}
        hasTableSwipeActions={true}
        isEmpty={false}
        onSortChange={[MockFunction]}
        selectedAll="false"
        setSelectedAll={[Function]}
        sort={
          Object {
            "createAt": "ascending",
          }
        }
      />
    </styled.thead>
    <TransitionGroup
      childFactory={[Function]}
      className="table-rows"
      component="tbody"
    >
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={false}
        key="0"
        mountOnEnter={true}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={500}
        unmountOnExit={true}
      >
        <Component />
      </Transition>
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={false}
        key="1"
        mountOnEnter={true}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={500}
        unmountOnExit={true}
      >
        <Component />
      </Transition>
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={false}
        key="2"
        mountOnEnter={true}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={500}
        unmountOnExit={true}
      >
        <Component />
      </Transition>
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={false}
        key="3"
        mountOnEnter={true}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={500}
        unmountOnExit={true}
      >
        <Component />
      </Transition>
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={false}
        key="4"
        mountOnEnter={true}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={500}
        unmountOnExit={true}
      >
        <Component />
      </Transition>
    </TransitionGroup>
  </styled.table>
</styled.div>
`;

exports[`<Table /> should render a table 1`] = `
<styled.div
  data-component-type="table"
>
  <styled.table>
    <styled.thead>
      <TableHeader
        columns={
          Array [
            Object {
              "alignment": "left",
              "content": [Function],
              "name": "fileName",
              "size": "auto",
              "title": "file name",
            },
            Object {
              "alignment": "right",
              "content": [Function],
              "name": "createAt",
              "size": "shrink",
              "title": "created at",
            },
          ]
        }
        hasBulkAction={false}
        hasLeftAction={true}
        hasSortEnabled={true}
        hasTableSwipeActions={false}
        isEmpty={false}
        onSortChange={[MockFunction]}
        selectedAll="false"
        setSelectedAll={[Function]}
        sort={
          Object {
            "createAt": "ascending",
          }
        }
      />
    </styled.thead>
    <TransitionGroup
      childFactory={[Function]}
      className="table-rows"
      component="tbody"
    >
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={false}
        key="0"
        mountOnEnter={true}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={500}
        unmountOnExit={true}
      >
        <Component />
      </Transition>
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={false}
        key="1"
        mountOnEnter={true}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={500}
        unmountOnExit={true}
      >
        <Component />
      </Transition>
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={false}
        key="2"
        mountOnEnter={true}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={500}
        unmountOnExit={true}
      >
        <Component />
      </Transition>
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={false}
        key="3"
        mountOnEnter={true}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={500}
        unmountOnExit={true}
      >
        <Component />
      </Transition>
      <Transition
        appear={false}
        enter={true}
        exit={true}
        in={false}
        key="4"
        mountOnEnter={true}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={500}
        unmountOnExit={true}
      >
        <Component />
      </Transition>
    </TransitionGroup>
  </styled.table>
</styled.div>
`;

exports[`<Table /> should render an empty table 1`] = `
<styled.div
  data-component-type="table"
>
  <styled.table>
    <styled.thead>
      <TableHeader
        columns={
          Array [
            Object {
              "alignment": "left",
              "content": [Function],
              "name": "fileName",
              "size": "auto",
              "title": "file name",
            },
            Object {
              "alignment": "right",
              "content": [Function],
              "name": "createAt",
              "size": "shrink",
              "title": "created at",
            },
          ]
        }
        hasBulkAction={false}
        hasLeftAction={false}
        hasSortEnabled={true}
        hasTableSwipeActions={false}
        isEmpty={true}
        onSortChange={[MockFunction]}
        selectedAll="false"
        setSelectedAll={[Function]}
        sort={
          Object {
            "createAt": "ascending",
          }
        }
      />
    </styled.thead>
    <TransitionGroup
      childFactory={[Function]}
      className="table-rows"
      component="tbody"
    >
      <styled.tr>
        <styled.td
          colSpan={2}
        >
          <div>
            empty
          </div>
        </styled.td>
      </styled.tr>
    </TransitionGroup>
  </styled.table>
</styled.div>
`;
